terminacion de los test y comienzo javaFx